fix for local paths

--- a/tarrasch.desktop
+++ b/tarrasch.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Name=TarraschChessGUI
-Comment=Surrender Dorothy
+Comment=By Grabthar's hammer
 Exec=/path/to/tarrasch-chess-gui/tarrasch
 Icon=/path/to/tarrasch-chess-gui/src/Tarrasch4Squares.ico
 Terminal=false
